--- a/.github/workflows/branch_deployments.yml
+++ b/.github/workflows/branch_deployments.yml
@@ -115,6 +115,7 @@ jobs:
           python_version: "${{ env.PYTHON_VERSION }}"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NSW_DOE_DATA_STACK_IN_A_BOX_TARGET_SCHEMA: pr_$(date +%s)
 
   dagster_cloud_docker_deploy:
     name: Docker Deploy
