--- a/.github/workflows/ci__test__no_source_change.yml
+++ b/.github/workflows/ci__test__no_source_change.yml
@@ -37,6 +37,8 @@ jobs:
         steps:
             - name: Checkout
               uses: actions/checkout@v4.1.1
+            - name: Set NSW_DOE_DATA_STACK_IN_A_BOX_TARGET_SCHEMA
+              run: echo "NSW_DOE_DATA_STACK_IN_A_BOX_TARGET_SCHEMA=pr_$(date +%s)_$(git rev-parse --abbrev-ref HEAD)" >> $GITHUB_ENV
             - name: Setup Python
               uses: actions/setup-python@v5.0.0
               with:
@@ -47,7 +49,6 @@ jobs:
               run: uv pip install --system -r requirements.txt
             - name: Dbt checks
               run: |
-                export NSW_DOE_DATA_STACK_IN_A_BOX_TARGET_SCHEMA=pr_$(date +%s)_$GITHUB_REF
                 echo schema $NSW_DOE_DATA_STACK_IN_A_BOX_TARGET_SCHEMA
                 cd ${{github.workspace}}/transformation/transformation_nsw_doe
                 dbt deps
@@ -72,7 +73,6 @@ jobs:
 
             - name: Deploy
               run: |
-                export NSW_DOE_DATA_STACK_IN_A_BOX_TARGET_SCHEMA=pr_$(date +%s)_$GITHUB_REF
                 echo schema $NSW_DOE_DATA_STACK_IN_A_BOX_TARGET_SCHEMA
                 cd ${{github.workspace}}/transformation/transformation_nsw_doe
                 dbt build --exclude "+*github*+ +*google*+" --models state:modified+ --defer --state ${{github.workspace}}/transformation/transformation_nsw_doe/target/last_manifest --profiles-dir ${{github.workspace}}/transformation/transformation_nsw_doe
