--- a/.github/workflows/branch_deployments.yml
+++ b/.github/workflows/branch_deployments.yml
@@ -60,7 +60,7 @@ jobs:
         uses: dagster-io/dagster-cloud-action/actions/utils/prerun@v0.1
 
       - name: Set NSW_DOE_DATA_STACK_IN_A_BOX_TARGET_SCHEMA
-        run: echo "NSW_DOE_DATA_STACK_IN_A_BOX_TARGET_SCHEMA=pr_$(date +%s)_${GITHUB_HEAD_REF:_${GITHUB_REF#refs/heads/}}" >> $GITHUB_ENV
+        run: echo "NSW_DOE_DATA_STACK_IN_A_BOX_TARGET_SCHEMA=pr_$(date +%s)_${GITHUB_HEAD_REF}_${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
 
       - name: Launch Docker Deploy
         if: steps.prerun.outputs.result == 'docker-deploy'
