--- a/.github/workflows/ci__test__no_source_change.yml
+++ b/.github/workflows/ci__test__no_source_change.yml
@@ -38,7 +38,9 @@ jobs:
             - name: Checkout
               uses: actions/checkout@v4.1.1
             - name: Set NSW_DOE_DATA_STACK_IN_A_BOX_TARGET_SCHEMA
-              run: echo "NSW_DOE_DATA_STACK_IN_A_BOX_TARGET_SCHEMA=pr_$(date +%s)_${GITHUB_HEAD_REF}_${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
+              run: |
+                echo "NSW_DOE_DATA_STACK_IN_A_BOX_TARGET_SCHEMA=pr_$(date +%s)_${GITHUB_HEAD_REF}" >> $GITHUB_ENV
+                echo "NSW_DOE_DATA_STACK_IN_A_BOX_TARGET_SCHEMA=${NSW_DOE_DATA_STACK_IN_A_BOX_TARGET_SCHEMA//\//_}" >> $GITHUB_ENV
             - name: Setup Python
               uses: actions/setup-python@v5.0.0
               with:
