--- a/transformation/transformation_nsw_doe/models/staging/acara/sources.yml
+++ b/transformation/transformation_nsw_doe/models/staging/acara/sources.yml
@@ -4,11 +4,15 @@ sources:
   - name: raw
     database: |
       {{ env_var('NSW_DOE_DATA_STACK_IN_A_BOX_DB_NAME') }}
-    schema: raw
+    schema: |
+      {{ env_var('NSW_DOE_DATA_STACK_IN_A_BOX_TARGET_SCHEMA') }}
     tables:
       - name: raw__nsw_doe_datahub__master_dataset
         loader: Dagster
         loaded_at_field: _load_timestamp
+        meta:
+          dagster:
+            asset_key: ["{{ env_var('NSW_DOE_DATA_STACK_IN_A_BOX_TARGET_SCHEMA') }}","raw__nsw_doe_datahub__master_dataset"] # This metadata specifies the corresponding Dagster asset for this dbt source.
 
         quoting:
           database: true
@@ -19,10 +23,7 @@ sources:
           warn_after: {count: 24, period: hour}
           error_after: {count: 48, period: hour}
 
-        # meta:
-        #   dagster:
-        #     asset_key: ["raw","raw_payments_py"] # This metadata specifies the corresponding Dagster asset for this dbt source.
       - name: raw__nsw_doe_datahub__ram
-        # meta:
-        #   dagster:
-        #     asset_key: ["raw","raw_orders_py"] # This metadata specifies the corresponding Dagster asset for this dbt source.
+        meta:
+          dagster:
+            asset_key: ["{{ env_var('NSW_DOE_DATA_STACK_IN_A_BOX_TARGET_SCHEMA') }}","raw__nsw_doe_datahub__ram"] # This metadata specifies the corresponding Dagster asset for this dbt source.
