--- a/transformation/transformation_nsw_doe/models/staging/nsw_doe/sources.yml
+++ b/transformation/transformation_nsw_doe/models/staging/nsw_doe/sources.yml
@@ -4,10 +4,14 @@ sources:
   - name: raw
     database: |
       {{ env_var('NSW_DOE_DATA_STACK_IN_A_BOX_DB_NAME') }}
-    schema: raw
+    schema: |
+      {{ env_var('NSW_DOE_DATA_STACK_IN_A_BOX_TARGET_SCHEMA') }}
     tables:
       - name: raw__acara__staff_numbers
-        # meta:
-        #   dagster:
-        #     asset_key: ["raw","raw_customers_py"] # This metadata specifies the corresponding Dagster asset for this dbt source.
+        meta:
+          dagster:
+            asset_key: ["{{ env_var('NSW_DOE_DATA_STACK_IN_A_BOX_TARGET_SCHEMA') }}", "raw__acara__staff_numbers"] # This metadata specifies the corresponding Dagster asset for this dbt source.
       - name: raw__acara__student_numbers
+        meta:
+          dagster:
+            asset_key: ["{{ env_var('NSW_DOE_DATA_STACK_IN_A_BOX_TARGET_SCHEMA') }}", "raw__acara__student_numbers"] # This metadata specifies the corresponding Dagster asset for this dbt source.
