--- a/.github/workflows/branch_deployments.yml
+++ b/.github/workflows/branch_deployments.yml
@@ -62,6 +62,7 @@ jobs:
       - name: Set NSW_DOE_DATA_STACK_IN_A_BOX_TARGET_SCHEMA
         run: |
           echo "NSW_DOE_DATA_STACK_IN_A_BOX_TARGET_SCHEMA=pr_full_$(echo ${GITHUB_HEAD_REF} | tr '[:upper:]' '[:lower:]' | sed -e 's/[^a-zA-Z0-9]/_/g')" >> $GITHUB_ENV
+          echo schema = $NSW_DOE_DATA_STACK_IN_A_BOX_TARGET_SCHEMA
 
       - name: Launch Docker Deploy
         if: steps.prerun.outputs.result == 'docker-deploy'
