--- a/.github/workflows/ci_dev.yml
+++ b/.github/workflows/ci_dev.yml
@@ -42,6 +42,7 @@ jobs:
       - name: Set NSW_DOE_DATA_STACK_IN_A_BOX_TARGET_SCHEMA
         run: |
           echo "NSW_DOE_DATA_STACK_IN_A_BOX_TARGET_SCHEMA=pr_dbt_only_$(date +%s)_$(echo ${GITHUB_HEAD_REF} | tr '[:upper:]' '[:lower:]' | sed -e 's/[^a-zA-Z0-9]/_/g')" >> $GITHUB_ENV
+          echo schema = $NSW_DOE_DATA_STACK_IN_A_BOX_TARGET_SCHEMA
       - name: Setup Python
         uses: actions/setup-python@v5.0.0
         with:
