--- a/.github/workflows/ci_test_branch_deployments_only_dbt.yml
+++ b/.github/workflows/ci_test_branch_deployments_only_dbt.yml
@@ -1,10 +1,10 @@
+name: Test Branch Deployments only DBT
 on:
     workflow_dispatch:
     pull_request:
       branches:
         - main
-      types:
-        - ready_for_review
+      types: [opened, synchronize, reopened, closed]
 env:
   NSW_DOE_DATA_STACK_IN_A_BOX_DAGSTER_PROJECT_DIR:    ${{ vars.NSW_DOE_DATA_STACK_IN_A_BOX_DAGSTER_PROJECT_DIR }}
   NSW_DOE_DATA_STACK_IN_A_BOX_DBT_PROJECT_DIR:        ${{ vars.NSW_DOE_DATA_STACK_IN_A_BOX_DBT_PROJECT_DIR }}
@@ -13,7 +13,6 @@ env:
 
   NSW_DOE_DATA_STACK_IN_A_BOX_DB_PATH_AND_DB:         ${{ secrets.NSW_DOE_DATA_STACK_IN_A_BOX_DB_PATH_AND_DB }}
   NSW_DOE_DATA_STACK_IN_A_BOX_DB_NAME:                ${{ vars.NSW_DOE_DATA_STACK_IN_A_BOX_DB_NAME }}
-  NSW_DOE_DATA_STACK_IN_A_BOX_TARGET_SCHEMA:          ${{ vars.NSW_DOE_DATA_STACK_IN_A_BOX_TARGET_SCHEMA }}__pr_$(date +%s)
 
   MOTHERDUCK_TOKEN:                                   ${{ secrets.MOTHERDUCK_TOKEN }}
   DATAFOLD_APIKEY:                                    ${{ secrets.DATAFOLD_APIKEY }}
@@ -39,6 +38,10 @@ jobs:
         steps:
             - name: Checkout
               uses: actions/checkout@v4.1.1
+            - name: Set NSW_DOE_DATA_STACK_IN_A_BOX_TARGET_SCHEMA
+              run: |
+                echo "NSW_DOE_DATA_STACK_IN_A_BOX_TARGET_SCHEMA=pr_dbt_only_$(date +%s)_$(echo ${GITHUB_HEAD_REF} | tr '[:upper:]' '[:lower:]' | sed -e 's/[^a-zA-Z0-9]/_/g')" >> $GITHUB_ENV
+                echo schema = $NSW_DOE_DATA_STACK_IN_A_BOX_TARGET_SCHEMA
             - name: Setup Python
               uses: actions/setup-python@v5.0.0
               with:
@@ -49,6 +52,7 @@ jobs:
               run: uv pip install --system -r requirements.txt
             - name: Dbt checks
               run: |
+                echo schema $NSW_DOE_DATA_STACK_IN_A_BOX_TARGET_SCHEMA
                 cd ${{github.workspace}}/transformation/transformation_nsw_doe
                 dbt deps
                 dbt parse
@@ -72,6 +76,7 @@ jobs:
 
             - name: Deploy
               run: |
+                echo schema $NSW_DOE_DATA_STACK_IN_A_BOX_TARGET_SCHEMA
                 cd ${{github.workspace}}/transformation/transformation_nsw_doe
                 dbt build --exclude "+*github*+ +*google*+" --models state:modified+ --defer --state ${{github.workspace}}/transformation/transformation_nsw_doe/target/last_manifest --profiles-dir ${{github.workspace}}/transformation/transformation_nsw_doe
 
