fixing prod deployment workflow

--- a/.github/workflows/ci_test_branch_deployments_end_to_end.yml
+++ b/.github/workflows/ci_test_branch_deployments_end_to_end.yml
@@ -1,4 +1,4 @@
-name: Branch Deployments End to End
+name: Test Branch Deployments End to End
 on:
   pull_request:
     types: [opened, synchronize, reopened, closed]
