temp fixes for malformed csv

--- a/requirements.in
+++ b/requirements.in
@@ -17,6 +17,7 @@ dagster-cloud
 # data schema validation
 pandera
 pandera[io]
+dagster-pandera
 
 # required for pandas to read excel for acara data
 openpyxl
