--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,16 @@
 #    uv pip compile requirements.in -o requirements.txt
 agate==1.7.1
     # via dbt-core
+aiobotocore==2.13.0
+    # via s3fs
 aiohttp==3.9.5
     # via
+    #   aiobotocore
     #   langchain
     #   langchain-community
+    #   s3fs
+aioitertools==0.11.0
+    # via aiobotocore
 aiosignal==1.3.1
     # via aiohttp
 alembic==1.13.1
@@ -47,6 +53,13 @@ black==24.4.2
     # via pandera
 bleach==6.1.0
     # via nbconvert
+boto3==1.34.106
+    # via dagster-aws
+botocore==1.34.106
+    # via
+    #   aiobotocore
+    #   boto3
+    #   s3transfer
 cachetools==5.3.3
     # via google-auth
 certifi==2024.2.2
@@ -112,6 +125,7 @@ dacite==1.8.1
     # via ydata-profiling
 dagster==1.7.6
     # via
+    #   dagster-aws
     #   dagster-cloud
     #   dagster-cloud-cli
     #   dagster-dbt
@@ -124,6 +138,7 @@ dagster==1.7.6
     #   dagster-pandera
     #   dagster-webserver
     #   dagstermill
+dagster-aws==0.23.6
 dagster-cloud==1.7.6
 dagster-cloud-cli==1.7.6
     # via dagster-cloud
@@ -209,9 +224,10 @@ frozenlist==1.4.1
     # via
     #   aiohttp
     #   aiosignal
-fsspec==2024.5.0
+fsspec==2024.6.0
     # via
     #   dlt
+    #   s3fs
     #   universal-pathlib
 gitdb==4.0.11
     # via gitpython
@@ -345,6 +361,10 @@ jinja2==3.1.4
     #   ydata-profiling
 jinja2-simple-tags==0.6.1
     # via sqlfluff-templater-dbt
+jmespath==1.0.1
+    # via
+    #   boto3
+    #   botocore
 joblib==1.4.2
     # via
     #   phik
@@ -532,6 +552,7 @@ packaging==23.2
     # via
     #   black
     #   dagster
+    #   dagster-aws
     #   dagster-cloud-cli
     #   dagster-dbt
     #   dagstermill
@@ -679,6 +700,7 @@ pytest==8.2.1
     # via sqlfluff
 python-dateutil==2.8.2
     # via
+    #   botocore
     #   croniter
     #   dagster
     #   dbt-semantic-interfaces
@@ -749,6 +771,7 @@ regex==2024.5.15
 requests==2.32.2
     # via
     #   dagster
+    #   dagster-aws
     #   dagster-cloud
     #   dagster-cloud-cli
     #   dagster-dbt
@@ -798,6 +821,9 @@ ruamel-yaml==0.17.40
 ruamel-yaml-clib==0.2.8
     # via ruamel-yaml
 ruff==0.4.4
+s3fs==2024.6.0
+s3transfer==0.10.1
+    # via boto3
 scikit-learn==1.5.0
 scipy==1.11.4
     # via
@@ -988,6 +1014,7 @@ uritemplate==4.1.1
     #   google-api-python-client
 urllib3==1.26.18
     # via
+    #   botocore
     #   dbt-core
     #   requests
 uvicorn==0.29.0
@@ -1021,7 +1048,9 @@ widgetsnbextension==4.0.10
 wordcloud==1.9.3
     # via ydata-profiling
 wrapt==1.16.0
-    # via pandera
+    # via
+    #   aiobotocore
+    #   pandera
 yarl==1.9.4
     # via
     #   aiohttp
