--- a/transformation/transformation_nsw_doe/models/staging/nsw_doe/sources.yml
+++ b/transformation/transformation_nsw_doe/models/staging/nsw_doe/sources.yml
@@ -99,16 +99,16 @@ sources:
       - name: raw__nsw_doe_datahub__apprenticeship_traineeship_training_contract_approvals
         meta:
           dagster:
-            asset_key: ["raw__nsw_doe_datahub__apprenticeship_traineeship_training_contract_approvals"] # This metadata specifies the corresponding Dagster asset for this dbt source.
+            asset_key: ["{{ env_var('NSW_DOE_DATA_STACK_IN_A_BOX_TARGET_SCHEMA') }}","raw__nsw_doe_datahub__apprenticeship_traineeship_training_contract_approvals"] # This metadata specifies the corresponding Dagster asset for this dbt source.
       - name: raw__nsw_doe_datahub__apprenticeship_traineeship_training_contract_completions
         meta:
           dagster:
-            asset_key: ["raw__nsw_doe_datahub__apprenticeship_traineeship_training_contract_completions"] # This metadata specifies the corresponding Dagster asset for this dbt source.
+            asset_key: ["{{ env_var('NSW_DOE_DATA_STACK_IN_A_BOX_TARGET_SCHEMA') }}","raw__nsw_doe_datahub__apprenticeship_traineeship_training_contract_completions"] # This metadata specifies the corresponding Dagster asset for this dbt source.
       - name: raw__nsw_doe_datahub__apprenticeship_traineeship_training_contract_in_training
         meta:
           dagster:
-            asset_key: ["raw__nsw_doe_datahub__apprenticeship_traineeship_training_contract_in_training"] # This metadata specifies the corresponding Dagster asset for this dbt source.
+            asset_key: ["{{ env_var('NSW_DOE_DATA_STACK_IN_A_BOX_TARGET_SCHEMA') }}","raw__nsw_doe_datahub__apprenticeship_traineeship_training_contract_in_training"] # This metadata specifies the corresponding Dagster asset for this dbt source.
       - name: raw__nsw_doe_datahub__attendance
         meta:
           dagster:
-            asset_key: ["raw__nsw_doe_datahub__attendance"] # This metadata specifies the corresponding Dagster asset for this dbt source.
+            asset_key: ["{{ env_var('NSW_DOE_DATA_STACK_IN_A_BOX_TARGET_SCHEMA') }}","raw__nsw_doe_datahub__attendance"] # This metadata specifies the corresponding Dagster asset for this dbt source.
