--- a/transformation/transformation_nsw_doe/models/semantic_layer/apprenticeship_traineeship_training.yml
+++ b/transformation/transformation_nsw_doe/models/semantic_layer/apprenticeship_traineeship_training.yml
@@ -11,7 +11,7 @@ semantic_models:
         expr: _meta__fct__apprenticeship_traineeship_training__sk
     dimensions:
       - name: calendar_year
-        expr: calendar_year
+        expr: calendar_date
         type: time
         type_params:
           time_granularity: year
