--- a/transformation/transformation_nsw_doe/models/semantic_layer/class.yml
+++ b/transformation/transformation_nsw_doe/models/semantic_layer/class.yml
@@ -14,7 +14,7 @@ semantic_models:
         expr: _meta__dim__school__sk
     dimensions:
       - name: calendar_year
-        expr: calendar_year
+        expr: calendar_date
         type: time
         type_params:
           time_granularity: year
