--- a/transformation/transformation_nsw_doe/models/semantic_layer/incident.yml
+++ b/transformation/transformation_nsw_doe/models/semantic_layer/incident.yml
@@ -11,7 +11,7 @@ semantic_models:
         expr: _meta__fct__incident__sk
     dimensions:
       - name: calendar_year
-        expr: calendar_year
+        expr: date_time_opened
         type: time
         type_params:
           time_granularity: year
