--- a/dagster_cloud.yaml
+++ b/dagster_cloud.yaml
@@ -5,3 +5,9 @@ locations:
     build:
         directory: .
     working_directory: ./orchestration
+  - code_source:
+      package_name: pipeline_nsw_doe_requires_secrets
+    location_name: nsw-doe-data-stack-in-a-box
+    build:
+        directory: .
+    working_directory: ./orchestration
