--- a/orchestration/workspace.yaml
+++ b/orchestration/workspace.yaml
@@ -14,4 +14,4 @@ load_from:
 #       location_name: "pipeline_nsw_doe"
     - python_module: pipeline_nsw_doe
     # - python_module: demo_pipeline_jaffle_shop
-    - python_module: pipeline_nsw_doe_requires_secrets
+    # - python_module: pipeline_nsw_doe_requires_secrets
