--- a/transformation/transformation_nsw_doe/models/semantic_layer/metrics.yml
+++ b/transformation/transformation_nsw_doe/models/semantic_layer/metrics.yml
@@ -155,6 +155,8 @@ saved_queries:
             - funding_aud_post_adjustments
             - funding_aud_original
             - funding_aud_post_adjustments_prev_year
+            - attendance_rate
+            - enrolments
             # - funding_aud_post_adjustments_yoy
         group_by:
             - Dimension('school__school_name')
