--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -87,6 +87,9 @@ tasks:
   duck:
     cmds:
       - duckdb ${GITHUB_WORKSPACE}/$NSW_DOE_DATA_STACK_IN_A_BOX_DB_PATH_AND_DB
+  duck_tpch:
+    cmds:
+      - duckdb ${GITHUB_WORKSPACE}/$TPCH_DB_PATH_AND_DB
   setup_sqltools:
     cmds:
       - cd ~/.local/share/vscode-sqltools && npm install duckdb-async@0.10.0 && exit 0
