--- a/transformation/demo_transformation_scaling_tpch/profiles.yml
+++ b/transformation/demo_transformation_scaling_tpch/profiles.yml
@@ -2,18 +2,18 @@ demo_scaling_tpch:
   outputs:
     dev:
       type: duckdb
-      path: "../../{{ env_var('NSW_DOE_DATA_STACK_IN_A_BOX_DB_PATH_AND_DB') }}"
-      database: "{{ env_var('NSW_DOE_DATA_STACK_IN_A_BOX_DB_NAME') }}"
+      path: "../../{{ env_var('TPCH_DB_PATH_AND_DB') }}"
+      database: "{{ env_var('TPCH_DB_NAME') }}"
       schema: "tpch"
       threads: 4
     prod:
       type: duckdb
-      path: "{{ env_var('NSW_DOE_DATA_STACK_IN_A_BOX_DB_PATH_AND_DB') }}"
+      path: "{{ env_var('TPCH_DB_PATH_AND_DB') }}"
       schema: "tpch"
       threads: 4
     test:
       type: duckdb
-      path: "{{ env_var('NSW_DOE_DATA_STACK_IN_A_BOX_DB_PATH_AND_DB') }}"
+      path: "{{ env_var('TPCH_DB_PATH_AND_DB') }}"
       schema: "tpch"
       threads: 4
-  target: "{{ env_var('NSW_DOE_DATA_STACK_IN_A_BOX__ENV') }}"
+  target: "{{ env_var('TPCH__ENV') }}"
